--- a/flex-media.html
+++ b/flex-media.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flexbox and Media Queries</title>
+  </head>
+
+  <body>
+    <!-- Flex Container -->
+    <div class="flex-container">
+      <div class="flex-item">Item #1</div>
+      <div class="flex-item">Item #2</div>
+      <div class="flex-item">Item #3</div>
+    </div>
+    <!-- End of Flex Container -->
     
-</body>
+  </body>
 </html>
