--- a/flex-media.html
+++ b/flex-media.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Flexbox and Media Queries</title>
   </head>
 
@@ -14,6 +15,6 @@
       <div class="flex-item">Item #3</div>
     </div>
     <!-- End of Flex Container -->
-    
+
   </body>
 </html>
