--- a/flex-media.html
+++ b/flex-media.html
@@ -10,9 +10,9 @@
   <body>
     <!-- Flex Container -->
     <div class="flex-container">
-      <div class="flex-item">Item #1</div>
-      <div class="flex-item">Item #2</div>
-      <div class="flex-item">Item #3</div>
+      <div class="flex-item">Item 1</div>
+      <div class="flex-item">Item 2</div>
+      <div class="flex-item">Item 3</div>
     </div>
     <!-- End of Flex Container -->
 
